# cfscripts

./: .cfscripts.json  .gitignore  Pipfile  README.md  diagnose_whatif.py  pyproject.toml  requirements.txt  vercel.json
api/: index.py
cf-lvl/: Cargo.toml
cf-lvl/src/: atcoder.rs  codeforces.rs  main.rs  utils.rs
devtools/: build.sh  build_windows.sh
pwa-frontend/: index.html  package-lock.json  package.json  vite.config.ts
pwa-frontend/src/: App.tsx  RatingView.tsx  api.ts  index.css  main.tsx
src/: main.py
src/cfscripts/: cli.py  config.py
src/cfscripts/core/: picker.py  scraper.py
src/cfscripts/lib/: api.py  atcoder.py  colors.py  contests.py  performance.py  printer.py  problems.py  rating.py  rating_calculator.py  submissions.py  virtual.py
src/cfscripts/scripts/: account.py  atcpick.py  dailyacs.py  pick.py  rangerank.py  unsolved.py  vperf.py  whatif.py
src/cfscripts/web/: server.py
src/lib/: api.py  contests.py  performance.py  rating.py  rating_calculator.py
src/scripts/WhatIf/: main.py
