[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cfscripts"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "requests",
    "requests-cache",
    "rich",
    "numpy",
    "fastapi",
    "uvicorn",
    "beautifulsoup4",
]

[project.scripts]
cfscripts = "cfscripts.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
