[package]
name = "cf-lvl"
version = "0.1.0"
edition = "2021"

[dependencies]
json = "0.12.4"
reqwest = { version = "0.12", features = ["json", "blocking", "gzip"] }
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["full"] }
webbrowser = "1.0.2"
